depends_compile_tests/tests/fail/derive/value/conflicting_hash.rs
use depends::derives::Value;

#[derive(Value)]
#[depends(unhashable)]
struct Foo<T> {
    bar: Vec<T>,
    #[depends(hash)]
    number: usize,
}

fn main() {}
