depends_compile_tests/tests/fail/derive/value/conflicting_hash.stderr
error: Attribute specified more than once
 --> tests/fail/derive/value/conflicting_hash.rs:7:15
  |
7 |     #[depends(hash)]
  |               ^^^^
